# sirmordred

./: README.md
docker/: Dockerfile
docker-compose/: docker-compose.yml
gitee-default-settings/: aliases.json  menu.yaml  projects.json  setup.cfg
