[general]
short_name = Grimoirelab_Gitee_Demo
update = true
min_update_delay = 300
debug = true
logs_dir = logs
# Number of items per bulk request to Elasticsearch
bulk_size = 500
# Number of items to get from Elasticsearch when scrolling
scroll_size = 100
menu_file = /menu.yaml
aliases_file = /aliases.json

[projects]
projects_file = /projects.json

[es_collection]
url = https://admin:admin@localhost:9200

[es_enrichment]
url = https://admin:admin@localhost:9200

[sortinghat]
host = localhost
user = root
password =
database = demo_sh
affiliate = false
unaffiliated_group = Unknown
autoprofile = [git,github]
matching = [email]
sleep_for = 3600

[panels]
kibiter_time_from= "now-1y"
kibiter_default_index= "git"
kibiter_url = http://admin:admin@localhost:5601
community = true
github-repos = true

[phases]
collection = true
identities = true
enrichment = true
panels = true

[git]
raw_index = git-raw
enriched_index = git-enriched
studies = [enrich_demography:git, enrich_onion:git]

[enrich_demography:git]

[enrich_onion:git]
in_index = git_onion-src
out_index = git_onion-enriched

[github]
raw_index = github_issues-raw
enriched_index = github_issues-enriched
category = issue
api-token = 
sleep-for-rate = true
no-archive = true
studies = [enrich_onion:github]

[github:pull]
raw_index = github_pulls-raw
enriched_index = github_pulls-enriched
category = pull_request
api-token = 
sleep-for-rate = true
no-archive = true

[github:repo]
raw_index = github_repo-raw
enriched_index = github_repo-enriched
category = repository
no-archive = true

[enrich_onion:github]
in_index_iss = github_issues_onion-src
in_index_prs = github_prs_onion-src
out_index_iss = github_issues_onion-enriched
out_index_prs = github_prs_onion-enriched

[gitee]
raw_index = gitee_issues-raw
enriched_index = gitee_issues-enriched
category = issue
api-token =
sleep-for-rate = true
no-archive = true
studies = [enrich_onion:gitee-issue]

[enrich_onion:gitee-issue]
in_index = gitee_issues-enriched
out_index = gitee_issues_onion-enriched
data_source = gitee_issues

[gitee:pull]
raw_index = gitee_pulls-raw
enriched_index = gitee_pulls-enriched
category = pull_request
api-token =
sleep-for-rate = true
no-archive = true
studies = [enrich_onion:gitee-pull]

[enrich_onion:gitee-pull]
in_index = gitee_pulls-enriched
out_index = gitee_pulls_onion-enriched
data_source = gitee_pulls

[gitee:repo]
raw_index = gitee_repo-raw
enriched_index = gitee_repo-enriched
category = repository
no-archive = true
